--- a/index.html
+++ b/index.html
@@ -6,105 +6,189 @@
     <title>Transavia</title>
     <link rel="stylesheet" href="/css/styles.css" media="screen" title="no title">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <meta name="viewport" content="initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
-  <header>
-<img src="/img/logotransavia.svg" alt="" />
+    <header>
+        <a href="index.html"><img class="logo" src="/img/logotransavia.svg" alt="" /></a>
 
-  <nav>
-        <ul>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Contact2</a></li>
-        </ul>
-</nav>
-  </header>
-    <!-- <div class="spacer">
-        &nbsp
-    </div> -->
+        <nav>
+            <!-- <ul>
+                <li><a href="#">Overzicht</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul> -->
+        </nav>
+        <a href="/inlog.html"><img class="logo2" src="/img/aanmeld2.svg" alt="" /></a>
+    </header>
     <figure>
         <h1>99 verhalen</h1>
-      </figure>
+    </figure>
+    <aside>
+        <form>
+            <aside>
+                <h3>Filters</h3>
+                <label><span>Artiest</span>
+   <input type="checkbox" name="name" value="">
+ </label>
+                <label><span>Categorie</span>
+   <input type="checkbox" name="name" value="">
+ </label>
+            </aside>
+        </form>
+    </aside>
 
-   <aside>
-
-      </aside>
-<section>
-<form>
-  <label for="search"></label>
-<input type="search" name="name" value="">
-  </form>
-  <select>
-    <optgroup label="Sorteren">
-
-
-    <option value="option">Reacties</option>
-    <option value="option">Likes</option>
-    <option value="option">Populariteit</option>
-  </select>
-    </optgroup>
-</section>
 
     <section>
-      <ul>
-        <li>
-          <section>
-            <h2>Headline test</h2>
-            <p>Mijn zoektocht naar Stijloefeningen van Raymond Queneau brengt mij bij de bibliotheek. Een Franse vrouw (zwart krullend haar) vraagt waar het postkantoor is. Ik zeg dat ze naar de Raadhuisstraat moet. Ze rent achter een auto aan. Je vindt nooit wat je zoekt.</p>
-          </section>
-        </li>
-        <li>
-          <section>
-            <h2>Headline test</h2>
-            <p>nog meer tekst om te testen.</p>
-          </section>
-        </li>
-        <li>
-          <section>
-            <h2>Headline test</h2>
-            <p>nog meer tekst om te testen.</p>
-          </section>
-        </li>
-        <li>
-          <section>
-            <h2>Headline test</h2>
-            <p>nog meer tekst om te testen.</p>
-          </section>
-        </li>
-        <li>
-          <section>
-            <h2>Headline test</h2>
-            <p>nog meer tekst om te testen.</p>
-          </section>
-        </li>
-        <li>
-          <section>
-            <h2>Headline test</h2>
-            <p>nog meer tekst om te testen.</p>
-          </section>
-        </li>
-        <li>
-          <section>
-            <h2>Headline test</h2>
-            <p>nog meer tekst om te testen.</p>
-          </section>
-        </li>
-        <li>
-          <section>
-            <h2>Headline test</h2>
-            <p>nog meer tekst om te testen.</p>
-          </section>
-        </li>
-        <li>
-          <section>
-            <h2>Headline test</h2>
-            <p>nog meer tekst om te testen.</p>
-          </section>
-        </li>
-      </ul>
+        <h4>Filter</h4>
+        <span class="plus">
+            +
+        </span>
+        <section class="filter">
+            <ul>
+                <li><label><span>Artiest</span></label><input type="checkbox" name="name" value=""></li>
+                <li><label><span>Genre</span></label><input type="checkbox" name="name" value=""></li>
+                <li><label><span>Zoeken</span></label><input type="search" name="name" value=""></li>
+            </ul>
+        </section>
     </section>
 
+
+    <section>
+        <ul>
+            <li>
+                <section>
+                    <span class="plusje">+</span>
+                    <h2>(57) – Paranoia</h2>
+                    <p>Ik sluip de bus uit. Kop in de kraag. Ik maak me klein en duw m’n zoon vooruit. Hij slaapt. Eindelijk.Zijn gejengel trok veel te veel aandacht. De mensen lopen over het stationsplein. Het voelt alsof er een grote, knipperende pijl
+                        boven m’n hoofd hangt: HIER LOOPT HIJ!</p>
+                    <button type="button" name="button"><a href="paranoia.html">Lees Meer</a></button>
+                    <img src="/img/empty.png" alt="" />
+                </section>
+            </li>
+            <li>
+                <section>
+                    <span class="plusje">+</span>
+                    <h2>(79) – Doof</h2>
+                    <p>De bus stopt. Mensen stappen uit. Heel voorzichtig kijk ik in de kinderwagen. Mijn zoon slaapt eindelijk. Ik had het kunnen weten, want halverwege de busreis merkte ik dat de mensen zich niet meer aan ons stoorden. Het gejank zou toen
+                        wel gestopt zijn.</p>
+                    <button type="button" name="button"><a href="doof.html">Lees Meer</a></button>
+                    <img src="/img/fill.png" alt="" />
+                </section>
+            </li>
+            <li>
+                <section>
+                    <span class="plusje">+</span>
+                    <h2>(66) – Dialoog</h2>
+                    <p>- Wat zoek je? – Hoe bedoel je: wat zoek je? – Nou gewoon, hoe ik het zeg: wat zoek je? Zo’n moeilijke vraag is dat toch niet? – Hoe weet je dat ik wat zoek? – Ik zie het aan je kop. Aan de manier waarop je die bus uitstapte en die
+                        kinderwagen voortduwde. Door weer en wind. Vastberaden, maar toch vol twijfel.</p>
+                    <button type="button" name="button"><a href="dialoog.html">Lees Meer</a></button>
+                    <img src="/img/empty.png" alt="" />
+                </section>
+            </li>
+            <li>
+                <section>
+                    <span class="plusje">+</span>
+                    <h2>(98) – Beroemd</h2>
+                    <p>Vlak voordat ik de bus uitstap bedank ik de buschauffeur via de spiegel voor zijn diensten. Hij zwaait joviaal terug. ‘Mijn vrouw is een groot fan van u’, roept hij. ‘Doe haar de groeten’, zeg ik en stap uit. Centraal Station. Ik duw
+                        mijn zoon voort. Hij slaapt. Zich onbewust van de last die er op zijn schouders rust. Zoon zijn van de grote Max J. Molovich. Je geeft het hem te doen.</p>
+                    <button type="button" name="button"><a href="index.html">Lees Meer</a></button>
+                    <img src="/img/empty.png" alt="" />
+                </section>
+            </li>
+            <li>
+                <section>
+                    <span class="plusje">+</span>
+                    <h2>(97) – Freudiaans</h2>
+                    <p>Ik stap uit de lul. Mijn aarsrivaal ligt te slapen in zijn kinderwagen. Wat een kutweer. De mensen zijn met zichzelf bezig, wat er hoogstwaarschijnlijk op neerkomt dat ze aan seks met hun moeder denken. Ik ben op weg naar de Openaarse
+                        Bilbiotheek van Amsterdam, om Stijloefeningen te lenen, een boek waarin Raymond Queneau op 99 verschillende manieren probeert te vertellen dat hij homoseksueel is.</p>
+                    <button type="button" name="button"><a href="index.html">Lees Meer</a></button>
+                    <img src="/img/empty.png" alt="" />
+                </section>
+            </li>
+            <li>
+                <section>
+                    <span class="plusje">+</span>
+                    <h2>(96) – Steenkolenfrans</h2>
+                    <p>Le premier fevrièr 2011. Presque midi. Le bus s’arrête. Ligne 21. Place de Gare Centrale. Je marche au derrière d’un poussette. Mon fils dort. Je suis en route au Bibliothèque Public pour emprunteur Exercices de Style de Raymond Queneau.
+                        C’est un livre très dificile d’acquérir. Mais zut alors, quelle ravage ici! Il y a beaucoup de puits de travaille! Les politis enfonsent, les foret forent. Devant le bibliothèque.</p>
+                    <button type="button" name="button"><a href="index.html">Lees Meer</a></button>
+                    <img src="/img/empty.png" alt="" />
+                </section>
+            </li>
+            <li>
+                <section>
+                    <span class="plusje">+</span>
+                    <h2>(95) – Martin Bril</h2>
+                    <p>Centraal Station. Iedereen gaat er naartoe, niemand moet er zijn. Behalve om verder te reizen. Ik stap uit de bus, lijn 21. Van Geuzenveld naar Centraal Station. Mijn zoon slaapt in zijn kinderwagen. Eindelijk. Het is druk op het plein,
+                        en toch heerst er een rust. De mensen zijn met zichzelf bezig. Kop in de kraag, ogen op de eigen voeten. Het miezert en het waait.</p>
+                    <button type="button" name="button"><a href="index.html">Lees Meer</a></button>
+                    <img src="/img/empty.png" alt="" />
+                </section>
+            </li>
+            <li>
+                <section>
+                    <span class="plusje">+</span>
+                    <h2>(94) – Het gebrek</h2>
+                    <p>
+                        De bus uit. Mijn zoon tukt in zijn kinderkoets. Eindelijk. Ik loop over het plein. Een gierende wind en een striemende miezerregen geselen mijn gezicht. De mensen kijken voor zich uit, ieder voor zich. Ik ben op weg richting de bibliotheek om Stijloefeningen
+                        te lenen van hoe heet die schijver, iets met een Q. Welk een bende is het hier trouwens, zie ik nu! Ik moet verder over een stuk loophout.
+                    </p>
+                    <button type="button" name="button"><a href="index.html">Lees Meer</a></button>
+                    <img src="/img/empty.png" alt="" />
+                </section>
+            </li>
+            <li>
+                <section>
+                    <span class="plusje">+</span>
+                    <h2>(93) – Nico Dijkshoorn</h2>
+                    <p>Ik stap uit een, ja wat is het eigenlijk?, een bus. Lijn 21? Zou zomaar kunnen. Twaalf uur. In de middag. Mijn zoon, luistert u mee?, mijn grandioze zoon, diezelfde zoon die zojuist nog die knotsgekke bus bij elkaar zat te janken alsof,
+                        alsof zijn leven ervan af hing, díe zoon ja, precies die zoon… die slaapt nu als een roos in zijn, hoe zou ik het noemen – in zijn kinderwagen? Lijkt er wel op.</p>
+                    <button type="button" name="button"><a href="index.html">Lees Meer</a></button>
+                    <img src="/img/empty.png" alt="" />
+                </section>
+
+            </li>
+            <li>
+                <section>
+                    <span class="plusje">+</span>
+                    <h2>(92) – Vergezocht</h2>
+                    <p>Het was in de omstreken van een gure februaridag rond het middaguur. Mijn zoon lag in zijn kinderwagen te slapen als een oude jamaicaan die teveel Rum achter de ontbrekende kiezen heeft. Ik stapte het gemeenteblik uit met de stramheid
+                        van een bejaarde ooievaar. Ik zet mijn welgevormde voet richting het stationsplein. De mensen krioelen door elkaar heen als een sprinkhanenplaag, door God gestuurd om mij iets duidelijk te maken.</p>
+                    <button type="button" name="button"><a href="index.html">Lees Meer</a></button>
+                    <img src="/img/empty.png" alt="" />
+                </section>
+            </li>
+            <li>
+                <section>
+                    <span class="plusje">+</span>
+                    <h2>(91) – Zoon</h2>
+                    <p>Vroem. Tuut tuut. Whèèèh!! Die! Die! Whèèèh! Die! Die! Hjumhjumhjum. Zzzzzzzzzz.* Zzzzzzz.** Zzzzzzz. Hjumhjumhjum. Zzzzzzz. Grumbl. Huh? Whèèèh. Die! Die! Papa? Hjmwhumwhum. Boe?Boe? Hjmwhumwhum. Whèèèh!!! Die!*** Zjjoemmm. Vroem.
+                        Tuut tuut. Schoe!****</p>
+                    <button type="button" name="button"><a href="index.html">Lees Meer</a></button>
+                    <img src="/img/empty.png" alt="" />
+                </section>
+            </li>
+            <li>
+                <section>
+                    <span class="plusje">+</span>
+                    <h2>(90) – Telegrafisch</h2>
+                    <p>BUS STOPT STOP NAAR BIBLIOTHEEK VOOR STIJLOEFENINGEN STOP VAN RAYMOND QUENEAU STOP REGEN EN WIND MENSEN IN ZICHZELF GEKEERD STOP MODDERIGE TERINGZOOI HIER STOP DRILBOREN EN HEIPALEN TEISTEREN TROMMELVLIEZEN STOP VROUW VRAAGT IN ENGELS
+                        MET FRANS ACCENT</p>
+                    <button type="button" name="button"><a href="index.html">Lees Meer</a></button>
+                    <img src="/img/empty.png" alt="" />
+                </section>
+            </li>
+        </ul>
+    </section>
+    <footer>
+        <p>
+            Mohammed Mulazada
+        </p>
+    </footer>
+    <script src='/js/script.js'>
+    </script>
 </body>
 
 </html>
