--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#">Overzicht</a></li>
                 <li><a href="#">Contact</a></li>
             </ul> -->
+  <img class = "label" src="/img/label.png" alt="" />
         </nav>
         <a href="/inlog.html"><img class="logo2" src="/img/aanmeld2.svg" alt="" /></a>
     </header>
@@ -35,6 +36,20 @@
                 <label><span>Categorie</span>
    <input type="checkbox" name="name" value="">
  </label>
+                <h3></h3>
+            </aside>
+            <aside>
+                <h3>Sorteren</h3>
+                <select>
+<optgroup label="Sorteren">
+<option>Comments</option>
+<option>Populariteit</option>
+</optgroup>
+</select>
+            </aside>
+            <aside>
+<h3>Zoeken</h3>
+<input type="search" name="name" value="">
             </aside>
         </form>
     </aside>
@@ -46,11 +61,23 @@
             +
         </span>
         <section class="filter">
+                  <h3>Filteren</h3>
+
             <ul>
                 <li><label><span>Artiest</span></label><input type="checkbox" name="name" value=""></li>
                 <li><label><span>Genre</span></label><input type="checkbox" name="name" value=""></li>
                 <li><label><span>Zoeken</span></label><input type="search" name="name" value=""></li>
             </ul>
+            <h4>Sorteren</h4>
+            <aside>
+
+
+            <ul>
+              <li><label><span></span></label><select>
+<option value="option">Comments</option>
+<option value="option">Favorieten</option>
+              </select></li>
+            </ul>  </aside>
         </section>
     </section>
 
