--- a/aanmelden.html
+++ b/aanmelden.html
@@ -26,7 +26,7 @@
     <main>
 
 
-    <form class="form">
+    <form class="form" action="index.html">
         <fieldset>
             <legend>Aanmelden</legend>
             <label for="text">Naam</label>
@@ -35,9 +35,9 @@
             <input type="email" name="email" value="" required>
             <label for="text">Wachtwoord</label>
             <input type="password" name="name" value="" required>
-
+<input type="submit" name="name" value="Aanmelden">
         </fieldset>
-  <button type="button" name="button"><a href="index.html">Aanmelden</a></button>
+  <!-- <button type="button" name="button"><a href="index.html">Aanmelden</a></button> -->
     </form>
       </main>
 </body>
