--- a/dialoog.html
+++ b/dialoog.html
@@ -21,9 +21,9 @@
       <a href="/aanmelden.html"><img class="logo2" src="/img/aanmeld2.svg" alt="" /></a>
   </header>
   <div class="article">
-<img src="img/d1.png" alt="mobile">
-<img src="img/d5.png" alt="tablet">
-<img src="img/d3.png" alt="pc">
+<img src="img/dd1.png" alt="mobile">
+<img src="img/dd2.png" alt="tablet">
+<img src="img/dd3.png" alt="pc">
 
 </aside>
 </body>
