--- a/doof.html
+++ b/doof.html
@@ -21,9 +21,9 @@
       <a href="/aanmelden.html"><img class="logo2" src="/img/aanmeld2.svg" alt="" /></a>
   </header>
   <div class="article">
-<img src="img/o1.png" alt="mobile">
-<img src="img/o4.png" alt="tablet">
-<img src="img/o3.png" alt="pc">
+<img src="img/e1.png" alt="mobile">
+<img src="img/e2.png" alt="tablet">
+<img src="img/e3.png" alt="pc">
 
 </aside>
 </body>
