Commit from Atom

--- a/dialoog.html
+++ b/dialoog.html
@@ -24,7 +24,6 @@
 <img src="img/dd1.png" alt="mobile">
 <img src="img/dd2.png" alt="tablet">
 <img src="img/dd3.png" alt="pc">
-
-</aside>
+</div>
 </body>
 </html>
