--- a/paranoia.html
+++ b/paranoia.html
@@ -23,7 +23,7 @@
   <div class="article">
 <img src="img/p1.png" alt="mobile">
 <img src="img/p2.png" alt="tablet">
-<img src="img/p3.png" alt="pc">
-</aside>
+<img src="img/p3.png" alt="pc">  
+</div>
 </body>
 </html>
