--- a/doof.html
+++ b/doof.html
@@ -13,10 +13,6 @@
       <a href="index.html"><img class="logo" src="/img/logotransavia.svg" alt="" /></a>
 
       <nav>
-          <!-- <ul>
-              <li><a href="#">Overzicht</a></li>
-              <li><a href="#">Contact</a></li>
-          </ul> -->
       </nav>
       <a href="/aanmelden.html"><img class="logo2" src="/img/aanmeld2.svg" alt="" /></a>
   </header>
@@ -24,7 +20,6 @@
 <img src="img/e1.png" alt="mobile">
 <img src="img/e2.png" alt="tablet">
 <img src="img/e3.png" alt="pc">
-
-</aside>
+</div>
 </body>
 </html>
