--- a/index.html
+++ b/index.html
@@ -271,6 +271,6 @@
       <footer>
          <p>Mohammed Mulazada</p>
       </footer>
-      <script src='/js/script.js'></script>
+      <script src="/js/script.js"></script>
    </body>
 </html>
