--- a/inlog.html
+++ b/inlog.html
@@ -1,42 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Transavia</title>
-  <link rel="stylesheet" href="/css/styles.css" media="screen" title="no title">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-  <header>
-      <a href="index.html"><img class="logo" src="/img/logotransavia.svg" alt="" /></a>
-
-
-      <a href="/aanmelden.html"><img class="logo2" src="/img/aanmeld2.svg" alt="" /></a>
-
-  </header>
-
-  <main>
-    <form class="form">
-        <fieldset>
-            <legend>Log-in</legend>
-            <label for="email">E-mail</label>
-            <input type="email" name="@" required value="">
-            <label for="text">Wachtwoord</label>
-            <input type="password" name="name" value="" required>
-<p>
-  Geen account? Klik <a href="aanmelden.html">hier.</a>
-</p>
-        </fieldset>
-  <button type="button" name="button"><a href="index.html">Log-In</a></button>
-    </form>
- </main>
-
-  <script src='/js/script.js'>
-  </script>
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -48,30 +9,30 @@
 </head>
 <body>
   <header>
-      <a href="index.html"><img class="logo" src="/img/logotransavia.svg" alt="" /></a>
+    <a href="index.html"><img class="logo" src="/img/logotransavia.svg" alt="" /></a>
 
 
-      <a href="/aanmelden.html"><img class="logo2" src="/img/aanmeld2.svg" alt="" /></a>
+    <a href="/aanmelden.html"><img class="logo2" src="/img/aanmeld2.svg" alt="" /></a>
 
   </header>
 
   <main>
     <form class="form" action="index.html">
-        <fieldset>
-            <legend>Log-in</legend>
-            <label for="email">E-mail</label>
-            <input type="email" name="@" required value="">
-            <label for="text">Wachtwoord</label>
-            <input type="password" name="name" value="" required>
-<input type="submit" name="name" value="Log-in">
-<p>
-  Geen account? Klik <a href="aanmelden.html">hier.</a>
-</p>
-        </fieldset>
+      <fieldset>
+        <legend>Log-in</legend>
+        <label for="email">E-mail</label>
+        <input type="email" name="@" required value="">
+        <label for="text">Wachtwoord</label>
+        <input type="password" name="name" value="" required>
+        <input type="submit" name="name" value="Log-in">
+        <p>
+          Geen account? Klik <a href="aanmelden.html">hier.</a>
+        </p>
+      </fieldset>
     </form>
- </main>
+  </main>
 
-  <script src='/js/script.js'>
+  <script src="/js/script.js">
   </script>
 </body>
 </html>
